syntax = "proto3";

package user;

import "shipping-service.proto";

option java_multiple_files = true;
option java_package = "github.io.truongbn.user";

message UserInformationRequest {
    string user_id = 1;
}

message UserDebitBalanceRequest {
    string user_id = 1;
    double new_balance = 2;
}

message UserDebitBalanceResponse {
    bool result = 1;
}

message UserInformation {
    string user_id = 1;
    string user_name = 2;
    double balance = 3;
    shipping.Address shipping_address = 4;
}

service UserService {
    rpc GetUserInformation (UserInformationRequest) returns (UserInformation);

    rpc ExecuteUserDebitBalance (UserDebitBalanceRequest) returns (UserDebitBalanceResponse);
}
